fix misalignment of sections on zoomout

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,6 +35,7 @@ h2 {
 section {
     padding: 2rem 1.5rem;
     display: inline-flex;
+    width: 100%;
     /*!*debugging start*!*/
     /*border: 1px solid green;*/
     /*!*debugging end*!*/
